--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!-- Не смог разобраться как соеденить Project_Wiki и Project_Wiki2. Из-за одинакового названия относительный путь не получилось указать, так что гиперссылка в футере работать будет только у меня как я понимаю -->
     <footer>
         <p>&copy; 2023 Задание 2. Все права защищены. <a rel="nonfollow"
-                href="D:\Ucheba\HTMLCSS\Tasks\H2\Project_Wiki\index.html">Project_Wiki</a></p>
+                href="https://nerigen.github.io/prwiki/">Project_Wiki</a></p>
     </footer>
 </body>
 
